
x X PaperSize x y
	results from the ".papersize" request and gives the paper
	size as "x" and "y" in points (1/72 i). It is not generated
	otherwise.

x X PDFMark attribute value
	includes information that is used by the distiller utility when
	generating PDF documents. Recognized types of "attribute" are:

	Author		"value" is the author of the document.
	Bookmark	"value" consists of two space-separated parts:
			An integer between 0 and 20 specifies the level
			of the bookmark. Bookmarks of the same level
			become children of the previous bookmark of the
			next higher level. The second part of "value"
			gives the bookmark title.
	Keywords	"value" is a comma-separated list of keywords
			for cross-document searches.
	Subject		"value" is the subject of the document.
	Title		"value" is the title of the document.

	This command is not directly generated by troff, but is usable
	as e.g. "\X'PDFMark: Keywords foo, bar, baz'" or
	"\X'PDFMark: Bookmark 2 Title of subsection'".

x X SupplyFont fontname filename
	results from the fourth argument to the extended ".fp" request
	and instructs the post-processor to include "filename" as glyph
	data for font "fontname".

x X Sync
	instructs the post-processor to write position and font information
	to the generated output exactly at the place where this escape
	sequence occurs. This is sometimes useful to ensure that
	following "\X'PS: ...'" commands work as expected. Not directly
	generated by troff, but usable as "\X'Sync'".

x X Track a
	gives a hint to the post-processor that the following
	characters are tracked by amount "a" in units. This is used
	by dpost for the PostScript "ashow" operator in order to
	reduce the size of the output. Interpretation of this command
	is completely optional; it does not change the semantics of
	the following output. It is only generated with the ".track"
	request.


Gunnar Ritter                                                   9/9/05